alteração de logo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </form>
         </aside>
         <article>
-            <img src="img/Gato.png" alt="Foto de gato com óculos escuro com ebac escrito de baixo dele">
+            <img src="img/logo.png" alt="Logo roxa, um circulo com um triangulo em 3 partes">
         </article>    
     </main>    
 </body>
