alteração de logo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <div id="title">
-            <h1> Titulo </h1>
-            <h1> test 01</h1>
+            <h1> auto Max </h1>
+            <h1></h1>
         </div>
 
         <ul>
@@ -28,9 +28,10 @@
     <main>
         <aside>
             <h2><span>inscreva-se agora</span></h2>
-            <h2>Newslatter</h2>
+            <h2></h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ipsum quibusdam explicabo ratione, magnam, corporis voluptatibus quisquam, natus quam dignissimos sint voluptas vero dolorum laboriosam maxime dolor sunt quia minima!
+                Quer aproveitar as melhores ofertas e descontos exclusivos? Não perca tempo!
+                 Inscreva-se agora e junte-se à nossa comunidade de clientes privilegiados! 
             </p>
             <form>
                 <input type="text" placeholder="Nome">
