alteração de logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="title">
-            <h1> auto Max </h1>
+            <h1> <b>Auto Max </b> </h1>
             <h1></h1>
         </div>
 
